Fix DevTools drag handle overlapping with tabs (#1685)
* Try making tabs taller

* lint css

--- a/frontend/src/pages/Player/Toolbar/DevToolsWindow/DevToolsWindow.module.scss
+++ b/frontend/src/pages/Player/Toolbar/DevToolsWindow/DevToolsWindow.module.scss
@@ -150,3 +150,15 @@
     height: 14px;
     width: 14px;
 }
+
+.tabs {
+    :global(.ant-tabs-nav) {
+        align-items: flex-end;
+        height: var(--size-xxxLarge);
+    }
+
+    :global(.ant-tabs-nav-wrap) {
+        align-self: flex-end !important;
+        height: 46px;
+    }
+}
